fix spacing for text boxes

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     width: 20rem;
     margin: 0 auto;
     margin-top: 1em;
-    padding: 3rem;
+    padding: 4rem;
 }
 #main {
     display: flex;
@@ -24,6 +24,7 @@ body {
     justify-content: center;
     font-size: 6em;
     margin-top: 1rem;
+    color: white;
 }
 #SettingsLogin {
     display: flex;
@@ -36,15 +37,15 @@ body {
 }
 
 #settings {
-    background-color: lightgrey;
-    margin-right: 10%;
+    background-color: #C4B480;
+    margin: 0 auto;
     border-radius: 10%;
     padding: .25rem;  
 }
 
-#login {
-    background-color: lightskyblue;
-    margin-left: 10%;
+#login { 
+    background-color: #C4B480;
+    margin: 0 auto;
     border-radius: 10%;
     padding: .25rem;
 }
@@ -61,15 +62,20 @@ body {
 #start {
     background-color: darkgreen;
     color: white;
-    margin-right: 10%;
+    margin: 0 auto;
     padding: .25rem;  
     border-radius: 10%;
 }
 
 #reset {
-    background-color: darkgreen;
+    background-color: #992C2D;
     color: white;
-    margin-left: 10%;
+    margin: 0 auto;
     padding: .25rem;  
     border-radius: 10%;
+}
+
+h2{
+    color: white;
+    /* background-color: #C4B480; */
 }
